First steps for email notifications sending

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - postgres
     volumes:
       - ./license_portal:/app
+    ports:
+        - "8000:8000"
 
   postgres:
     image: 'postgres:13'
