--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,12 @@ services:
      POSTGRES_USER: 'licenses'
      POSTGRES_PASSWORD: 'licenses'
      POSTGRES_DB: 'licenses'
+
+  rabbitmq:
+    image: rabbitmq:management
+    ports:
+      - "5672:5672"   # RabbitMQ Port
+      - "15672:15672" # Admin interface RabbitMQ Port
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
