--- a/license_portal/requirements.txt
+++ b/license_portal/requirements.txt
@@ -1,2 +1,6 @@
-Django==3.2
-psycopg2-binary
+celery==5.3.1
+Django==4.2.4
+django-celery-beat==2.5.0
+django-celery-results==2.5.1
+djangorestframework==3.14.0
+psycopg2-binary==2.9.7
